# ci-mock

./: .gitignore  README.md  demo_add_questions.py  pnpm-lock.yaml  pnpm-workspace.yaml  test_add_questions.py  test_server_auth.py
.github/: copilot-instructions.md
.github/workflows/: deploy-azure-function.yml  red-team-security.yml
auto-submit/: README.md  function_app.py  host.json
azure-functions/: deployment.md  local.settings.json  requirements.txt
backend/: .env.example  .env.sample  Dockerfile  README.md  __init__.py  constants.py  database.py  datetime_utils.py  error_utils.py  main.py  models.py  pyproject.toml  rag_database.py  tmp_call.py
backend/routers/: admin.py  candidate.py  interview.py  live_interview.py  rag.py  scoring.py  utils.py
backend/tests/: demo_add_questions.py  test_add_questions.py  test_create_assessment_generation.py  test_generate_handler.py  test_normalize_skill.py  test_red_teaming.py  test_scoring_rubric.py  test_server_auth.py
docs/: ALL_PHASES_COMPLETE_SUMMARY.md  ALL_PHASES_STATUS.md  API_ENDPOINTS_SUMMARY.md  DEDUPLICATION_ARCHITECTURE.md  E2E_TESTING_ADMIN.md  E2E_TESTING_MASTER.md  E2E_TESTING_SMARTMOCK.md  E2E_TESTING_TALENS.md  HYBRID_QUESTION_GENERATION.md  HYBRID_SCORING_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PHASE4A_IMPLEMENTATION_PLAN.md  PHASE4A_PREPARATION_COMPLETE.md  PHASE4_AZURE_SERVICE_BUS_SETUP.md  POST_SUBMISSION_WORKFLOW_ANALYSIS.md  RED_TEAMING_README.md  add-questions-implementation.md  auto-submission-tracking.md  cosmos-data-model-review.md  data-model-with-roles.md  functional_checklist.md  judge0-azure-setup.md  rag-provisioning.md  red-teaming-test-cases.md  responses-migration-plan.md  role-system-implementation.md  s2s-environment-configuration.md  server-authoritative-assessment.md  testing-guide.md
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
frontend/apps/admin/: next.config.ts  package.json
frontend/apps/smartmock/: README.md  next.config.ts  package.json
frontend/apps/talens/: next.config.ts  package.json  tsconfig.json
frontend/apps/talens-suite/: next.config.mjs  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientBoot.tsx  Header.tsx  LiveReactEditor.tsx
frontend/src/lib/: apiClient.ts  performance.tsx  schema.ts
llm-agent/: .env.sample  Dockerfile  README.md  agents.py  autogen_studio_config.py  embeddings.py  logging_config.py  main.py  prompt_loader.py  pyproject.toml  structured.py  tools.py  tracing.py
llm-agent/prompts/: README.md  code_analyst.prompty  code_analyst.yaml  orchestrator.prompty  orchestrator.yaml  question_enhancer.prompty  question_enhancer.yaml  question_generator.prompty  question_generator.yaml  rag_qa.prompty  rag_qa.yaml  rag_validator.prompty  rag_validator.yaml  report_synthesizer.prompty  report_synthesizer.yaml  resume_screen.yaml  text_analyst.prompty  text_analyst.yaml
llm-agent/rubrics/: default.json
scripts/: cosmos_connectivity.py  cosmos_query_ru_test.py  cosmos_vector_test.py  demo_red_teaming.py  generate_embeddings.py  smoke_test_backend.py  test_imports.py
smartscreen/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
smartscreen/static/: config.yaml  index.html  script.js  styles.css
talens/: README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
talens-suite/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  staticwebapp.config.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
talens-suite-showcase/: .gitignore  package.json  staticwebapp.config.json
talens-suite-showcase/src/: index.html  index_new.html  index_old.html  script.js  script_new.js  script_old.js  styles.css  styles_new.css  styles_old.css
talens-suite/src/: index.html  index_cosmic.html  script.js  styles.css  styles_cosmic.css
talens-suite/src/app/: layout.tsx  page.tsx
talens/src/app/: globals.css  page.tsx
talens/src/lib/: utils.ts
(+83 files in other folders)
